<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/bg_dark"
                tools:context="com.lin.cainiaolives.ui.login.LoginActivity">

    <Button
        android:id="@+id/btn_register_yzm"
        android:layout_width="wrap_content"
        android:layout_height="80px"
        android:layout_above="@+id/btn_register_register"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20px"
        android:background="@drawable/bg_login"
        android:text="@string/VerificationCode"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_TIL_username"
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:layout_marginTop="20px"
        android:gravity="top|center_horizontal"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/edt_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_username"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_TIL_password"
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:layout_below="@+id/register_TIL_username"
        android:gravity="center_horizontal"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_TIL_repassword"
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:layout_below="@+id/register_TIL_password"
        android:gravity="center_horizontal"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/edt_register_repeatpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_TIL_repassword"
        android:layout_marginTop="10px"
        android:background="@drawable/bg_login"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="40px"/>

    <Button
        android:id="@+id/btn_back_login"
        android:layout_width="200px"
        android:layout_height="90px"
        android:layout_alignStart="@+id/btn_register_register"
        android:layout_below="@+id/btn_register_register"
        android:layout_marginTop="30px"
        android:background="@null"
        android:text="@string/back_login"
        android:textColor="@color/white"
        android:textSize="30px"/>

    <Button
        android:id="@+id/btn_moblie_register"
        android:layout_width="200px"
        android:layout_height="90px"
        android:layout_alignEnd="@+id/btn_register_register"
        android:layout_below="@+id/btn_register_register"
        android:layout_marginTop="30px"
        android:background="@null"
        android:text="@string/btn_moblie_register"
        android:textColor="@color/white"
        android:textSize="30px"/>

</RelativeLayout>
